# nodelta-System

./: .gitignore  README.md  necessary.ini  pyproject.toml  strategy.ini  supervisord.conf
config/: __init__.py
doc/: gateway开发规范.md
example/: backtest_example.py  cta_boll.py  print_bn_bar.py  print_bn_depth.py  print_ok_bar.py  print_ok_depth.py  symbol_contract_map.py  test_bn_gateway.py  trade_ok_spot.py
example/.ipynb_checkpoints/: cointr client-checkpoint.ipynb
nodelta/: __init__.py
nodelta/gateway/: backtest_cta_gateway.py  backtest_cta_gateway_.py  binance_gateway.py  gateway.py  okx_gateway.py  web3_gateway.py
nodelta/gateway/SDK/binance_sdk/binance/um_futures/: __init__.py
nodelta/gateway/SDK/cointr_sdk/um_futures/: websocket_client.py
nodelta/gateway/SDK/okx_sdk/example/: get_started_en.ipynb
nodelta/gateway/SDK/okx_sdk/okx/websocket/: WsClientProtocol.py
nodelta/gateway/nd_websocket/: nd_websocket_manager.py
nodelta/trader/: constant.py  engine.py  object.py  strategy_template.py
nodelta/utils/: sender.py  utility.py
radar/: monitor.py
