[tool.poetry]
name = "nodelta-hft-system"
version = "0.1.0"
description = ""
authors = ["TraderMing"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.25.1"
websocket-client = ">=1.5.0"
pycryptodome = ">=3.15.0"
pytest-cov = "==2.8.1"
pytest = "==5.4.1"
sure = "==1.4.11"
responses = "==0.10.12"
pytest-pep8 = "==1.0.6"
black = "*"
flake8 = "*"
tox = "*"
tox-pyenv = "*"
wheel = "*"
pre-commit = "*"
sphinx = "*"
sphinx_rtd_theme = "*"
importlib-metadata = "^4.0.1"
httpx = {version = "^0.18.2", extras = ["http2"]}
keyring = "^23.0.1"
Twisted = "^21.2.0"
pyOpenSSL = "23.2.0"
service-identity = "^23.1.0"
numpy = "*"
pipreqs = "*"
aiohttp = "*"
autobahn = "*"
setuptools = "*"
tomli ="*"
psutil = "*"
bs4 = "*"
web3 = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"